--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.2.10
+beautifulsoup4==4.9.1
+bootstrap4==0.1.0
+bs4==0.0.1
 Django==3.1.1
+django-bootstrap4==2.2.0
+importlib-metadata==1.7.0
 Pillow==7.2.0
 pytz==2020.1
+soupsieve==2.0.1
 sqlparse==0.3.1
+whitenoise==5.2.0
+zipp==3.1.0
